# sqlserver_snowflake_compare_v2

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  DEPENDENCIES.md  Makefile  README.md  SETUP.md  implementation.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.md  requirements.txt
config/: README.md  config_template.json
docs/: api.md  architecture.md  development.md
logs/: .gitkeep
scripts/schema/: 00_create_all_tables.sql  01_create_config_table.sql  02_create_query_repository.sql  03_create_test_runs.sql  04_create_test_results.sql  05_create_comparison_results.sql  README.md
src/: __init__.py
src/analysis/: __init__.py  comparator.py
src/database/: __init__.py  connections.py  schema.py
src/execution/: __init__.py  executor.py
src/translation/: __init__.py  translator.py
src/ui/: main.py
src/utils/: config_loader.py  exceptions.py  logger.py
tests/: __init__.py  conftest.py
tests/analysis/: test_comparator.py
tests/database/: test_schema.py
tests/translation/: test_translator.py
